backend/internal/architecture/testdata/invalid/internal/modules/bad/generic_repository.go
package bad

// Repository demonstrates a forbidden generic repository abstraction.
type Repository[T any] interface{ Save(T) error }
